--- a/Evaluation.Web/Components/Pages/FeedbackFeed.razor
+++ b/Evaluation.Web/Components/Pages/FeedbackFeed.razor
@@ -57,7 +57,7 @@
                         @if (StartLoading)
                         {
                             <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
-                            <span role="status">Validating Post...</span>
+                            <span role="state">Validating Post...</span>
                         }
                         else
                         {
