--- a/Evaluation.Web/Components/Pages/FeedbackFeed.razor
+++ b/Evaluation.Web/Components/Pages/FeedbackFeed.razor
@@ -41,7 +41,7 @@
                             <option selected value="">Vælg et Forum</option>
                             @foreach (var room in Rooms)
                             {
-                                <option value="@room.RoomId">
+                                <option value="@room.Id">
                                     @room.Title
                                 </option>
                             }
